--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   overflow-x: hidden; 
 }
-
+/*Header*/
 header {
   display: flex;
   background-color: #679c41;
@@ -46,7 +46,7 @@ nav select {
   width: 200px;
   background: #ffffff;
 }
-
+/*Main*/
 main {
   flex: 1;
   padding: 20px;
@@ -325,6 +325,7 @@ main {
   border-radius: 100px;
 }
 
+/*Button load more*/
 #load-more {
   display: block;
   margin: 20px auto;
@@ -341,7 +342,7 @@ main {
 #load-more:hover {
   background-color: #679c41;
 }
-
+/*Footer*/
 footer {
   background-color: #679c41;
   color: #fff;
@@ -370,4 +371,305 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
+}
+
+/* Media query for desktop devices */
+@media screen and (min-width: 769px) {
+  .filters-box {
+    display: none; /* Hide the filters box on desktop view */
+  }
+
+  .filters-window {
+    position: static; /* change the position to static on desktop view */
+    display: block; /* show all filters on desktop view */
+    box-shadow: none; /* remove the box shadow on desktop view */
+  }
+}
+
+/* media query for mobile devices */
+@media screen and (max-width: 768px) {
+  header {
+    font-size: 16px;
+    display: block;
+  }
+
+  html,
+  body {
+    overscroll-behavior: none;
+  }
+
+  .logo h1 {
+    padding-left: 10px;
+    margin-top: -30px;
+  }
+
+  .logo img {
+    padding-left: 10px;
+    width: 100px;
+  }
+
+  nav {
+    margin: 1px 50px;
+    text-align: center;
+  }
+
+  nav select {
+    width: 90%;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 1px solid #41619c;
+    border-radius: 5px;
+    margin-top: 10px;
+  }
+
+  .content-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .sorting-filters-wrapper {
+    flex-basis: 100%;
+  }
+
+  .product-grid-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 1fr);
+    justify-content: center;
+  }
+
+  .ratings span:hover {
+    transform: scale(1);
+  }
+
+  .sorting-filters-container {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .sorting {
+    order: -1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+    right: 0;
+    margin-left: auto;
+  }
+
+  #products {
+    max-width: 115%;
+    width: 115%;
+    padding-left: 15px;
+    box-sizing: border-box;
+    gap: 0px;
+  }
+
+  .product-box {
+    width: 44%;
+  }
+
+  .product-image {
+    height: 200px;
+  }
+
+  .product-info {
+    max-height: none;
+    overflow: visible;
+  }
+
+  .product-info p {
+    font-size: 14px;
+  }
+
+  .product-info p.price {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+
+  .product-info h2 {
+    margin-bottom: -10px;
+    font-size: 14px;
+    height: 54px;
+    white-space: normal;
+  }
+
+  .product .add-to-cart-container {
+    position: absolute;
+    bottom: -17px;
+  }
+
+  .add-to-cart-container {
+    position: relative;
+    align-self: center;
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+  }
+
+  .add-to-cart-button {
+    border-radius: 100px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    width: 100%;
+    margin-left: 20px;
+  }
+
+  .product-counter {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 16px;
+  }
+
+  .filtering {
+    padding: 10px;
+  }
+
+  .filters {
+    width: 170px;
+    background-color: #ffffff;
+  }
+
+  .sorting label {
+    font-size: 16px;
+    display: none;
+  }
+
+  .sorting .select-container {
+    position: absolute;
+  }
+
+  .sorting select {
+    width: auto;
+    max-width: 300px;
+    margin-top: 80px;
+    position: absolute;
+    margin-right: 17px;
+    padding: 5px 10px;
+    font-size: 16px;
+    border: 1px solid #41619c;
+    background-color: #fff;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    border-radius: 5px;
+    cursor: pointer;
+    appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0rem center;
+    background-size: 1em;
+  }
+
+  footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    font-size: 16px;
+  }
+
+  footer li {
+    margin: 0 5px;
+  }
+
+  header {
+    margin-bottom: 30px;
+  }
+
+  .filters-box {
+    margin-bottom: 10px;
+    position: absolute;
+    left: 0;
+    top: 150%;
+    width: 600%;
+    margin-left: 15px;
+    max-width: 300px;
+    transform: translateY(-50%);
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    padding: 5px 10px;
+    border: 1px solid #41619c;
+    border-radius: 5px;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: right 0.1rem center;
+    background-size: 1em;
+  }
+
+  .filters-window {
+    left: 0;
+    right: unset;
+    top: 0;
+    bottom: 0;
+    max-height: 100vh;
+    overflow-y: auto;
+  }
+
+  .filters-window.show-filters {
+    position: fixed;
+    left: 0;
+    z-index: 999; /* ensure the filters window is above other elements */
+    /*animation*/
+    animation: slideIn 0.3s forwards;
+  }
+
+  .sorting-filters-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .sorting {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .sorting label {
+    font-size: 16px;
+    margin-right: 10px;
+  }
+
+  .select-container {
+    position: relative;
+    flex: 1;
+  }
+
+  .select-container::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0.5rem;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0.35rem 0.35rem 0;
+    border-color: #333 transparent transparent;
+    pointer-events: none;
+  }
+  /* define the animation */
+  @keyframes slideIn {
+    from {
+      left: -100%; /* start off-screen to the left */
+    }
+    to {
+      left: 0; /* slide in to the left edge */
+    }
+  }
 }
